--- a/external/libzmf/libzmf-config-guess.patch.1
+++ b/external/libzmf/libzmf-config-guess.patch.1
@@ -515,8 +515,9 @@ diff -up ./config.sub.dt ./config.sub
  	| alpha64 | alpha64ev[4-8] | alpha64ev56 | alpha64ev6[78] | alpha64pca5[67] \
  	| am33_2.0 \
 -	| arc \
+-	| arm | arm[bl]e | arme[lb] | armv[2-8] | armv[3-8][lb] | armv7[arm] \
 +	| arc | arceb \
- 	| arm | arm[bl]e | arme[lb] | armv[2-8] | armv[3-8][lb] | armv7[arm] \
++	| arm | arm[bl]e | arme[lb] | armv[2-8] | armv[3-8][lb] | armv7[arm] | arm64 \
  	| avr | avr32 \
  	| be32 | be64 \
  	| bfin \
@@ -589,8 +590,9 @@ diff -up ./config.sub.dt ./config.sub
  	| alpha-* | alphaev[4-8]-* | alphaev56-* | alphaev6[78]-* \
  	| alpha64-* | alpha64ev[4-8]-* | alpha64ev56-* | alpha64ev6[78]-* \
 -	| alphapca5[67]-* | alpha64pca5[67]-* | arc-* \
+-	| arm-*  | armbe-* | armle-* | armeb-* | armv*-* \
 +	| alphapca5[67]-* | alpha64pca5[67]-* | arc-* | arceb-* \
- 	| arm-*  | armbe-* | armle-* | armeb-* | armv*-* \
++	| arm-*  | armbe-* | armle-* | armeb-* | armv*-* | arm64-* \
  	| avr-* | avr32-* \
  	| be32-* | be64-* \
  	| bfin-* | bs2000-* \
