--- a/extras/source/autocorr/lang/hr/DocumentList.xml
+++ b/extras/source/autocorr/lang/hr/DocumentList.xml
@@ -19,6 +19,8 @@
   <block-list:block block-list:abbreviated-name=":'u:" block-list:name="ȕ"/>
   <block-list:block block-list:abbreviated-name="%o" block-list:name="‰"/>
   <block-list:block block-list:abbreviated-name="%oo" block-list:name="‱"/>
+  <block-list:block block-list:abbreviated-name=":^10:" block-list:name="¹⁰"/>
+  <block-list:block block-list:abbreviated-name=":_10:" block-list:name="₁₀"/>
   <block-list:block block-list:abbreviated-name=":_0:" block-list:name="₀"/>
   <block-list:block block-list:abbreviated-name=":^0:" block-list:name="⁰"/>
   <block-list:block block-list:abbreviated-name=":100:" block-list:name="💯"/>
@@ -74,8 +76,6 @@
   <block-list:block block-list:abbreviated-name=":9,30:" block-list:name="🕤"/>
   <block-list:block block-list:abbreviated-name=":_9:" block-list:name="₉"/>
   <block-list:block block-list:abbreviated-name=":^9:" block-list:name="⁹"/>
-  <block-list:block block-list:abbreviated-name=":^10:" block-list:name="¹⁰"/>
-  <block-list:block block-list:abbreviated-name=":_10:" block-list:name="₁₀"/>
   <block-list:block block-list:abbreviated-name=":9 h:" block-list:name="🕘"/>
   <block-list:block block-list:abbreviated-name=":abc:" block-list:name="🔤"/>
   <block-list:block block-list:abbreviated-name=":^a:" block-list:name="ᵃ"/>
@@ -845,9 +845,9 @@
   <block-list:block block-list:abbreviated-name=":putovnica:" block-list:name="🛂"/>
   <block-list:block block-list:abbreviated-name=":puž:" block-list:name="🐌"/>
   <block-list:block block-list:abbreviated-name=":quarter rest:" block-list:name="𝄽"/>
-  <block-list:block block-list:abbreviated-name=":radijska tipka:" block-list:name="🔘"/>
   <block-list:block block-list:abbreviated-name=":radioaktivno:" block-list:name="☢"/>
   <block-list:block block-list:abbreviated-name=":radio:" block-list:name="📻"/>
+  <block-list:block block-list:abbreviated-name=":radiogumb:" block-list:name="🔘"/>
   <block-list:block block-list:abbreviated-name=":radnik:" block-list:name="👷"/>
   <block-list:block block-list:abbreviated-name=":ragbi nogomet:" block-list:name="🏉"/>
   <block-list:block block-list:abbreviated-name=":rajčica:" block-list:name="🍅"/>
