openssl: update to 1.1.1g
The OpenSSL 1.1.1 release is currently the only supported version
and it already has the Windows Arm64 support I was looking for.

This change also explicitly enables thread support, which Python
depends on since release 3.7, which removed the --without-threads
build option. But the explicit OPENSSL_THREADS was just added in
3.8.4, so the old no-threads build fails now and was wrong since
probably much longer.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98435
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 0911b0a26356aa53bb94a1d2171f36e6c2e28749)

Change-Id: I61d94f966bc59407f213f4a81f0a49d0c05f8948

--- a/external/postgresql/postgres-msvc-build.patch.1
+++ b/external/postgresql/postgres-msvc-build.patch.1
@@ -80,7 +80,7 @@ Also Cygwin perl has $Config{osname} different from MSWin32, and why even check 
  	# Quote the .exe name in case it has spaces
  	my $opensslcmd =
 -	  qq("$self->{options}->{openssl}\\bin\\openssl.exe" version 2>&1);
-+	  qq("$self->{options}->{openssl}\\out32dll\\openssl.exe" version 2>&1);
++	  qq("$self->{options}->{openssl}\\apps\\openssl.exe" version 2>&1);
 + print "$opensslcmd";
  	my $sslout = `$opensslcmd`;
  
@@ -101,10 +101,10 @@ Also Cygwin perl has $Config{osname} different from MSWin32, and why even check 
  				# parameter.
  				$proj->AddLibrary(
 -					$self->{options}->{openssl} . '\lib\ssleay32.lib', 0);
-+					$self->{options}->{openssl} . '\out32dll\ssleay32.lib', 0);
++					$self->{options}->{openssl} . '\ssleay32.lib', 0);
  				$proj->AddLibrary(
 -					$self->{options}->{openssl} . '\lib\libeay32.lib', 0);
-+					$self->{options}->{openssl} . '\out32dll\libeay32.lib', 0);
++					$self->{options}->{openssl} . '\libeay32.lib', 0);
  			}
  		}
  	}
